<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/humhubGrey">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:background="@drawable/toptitle"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:hint="@string/login_username_hint"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/login_remember"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/remember_me"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_login_text"
        android:textSize="18sp" />

</LinearLayout>